--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                 // Load your text files - add all your file paths here
                 const files = [
                     'knowledge/buddhist_terms.txt',
-                    'knowledge/explanations.txt'
+                    'knowledge/explanations.txt',
+					'knowledge/explanations2.txt'
                     // Add more file paths as needed
                 ];
 
