--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
             const files = [
                 'knowledge/buddhist_terms.txt',
                 'knowledge/explanations.txt',
-                'knowledge/explanations2.txt'
+                'knowledge/explanations2.txt',
+				'knowledge/explanations3.txt'
             ];
 
             // Reset our data structures
