--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         // Load and process text files
         async function loadTextFiles() {
             const files = {
-                'dhamma1.txt': 'path/to/dhamma1.txt',
-                'dhamma2.txt': 'path/to/dhamma2.txt',
-                'dhamma3.txt': 'path/to/dhamma3.txt',
+                'dhamma1.txt': 'knowledge/explanations.txt',
+                'dhamma2.txt': 'knowledge/explanations2.txt',
+                'dhamma3.txt': 'knowledge/explanations3.txt',
                 // Add additional file mappings here
             };
 
